--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <div id="tentang" class="px-4 py-4 bg-secondary text-center">
         <div class="mx-auto w-75">
           <h3 class="text-white">Tentang Kami</h3>
-          <p class="text-center text-white"><img src="images/about-us.png" align="left" style="width: 100px; height: auto" class="me-3 mb-3" />Kami hadir untuk para pecinta K-Pop yang saat ini banyak digandrungi oleh para remaja maupun dewasa. Kami menghadirkan wadah terpercaya untuk para pecinta K-Pop dala mendapatkan Album dan Lightstick idol kesayangan anda dengan garansi 100% terpercaya.</p>
+          <p class="text-center text-white"><img src="gambar/IMG-20231205-WA0023.jpg" align="left" style="width: 100px; height: auto" class="me-3 mb-3" />Kami hadir untuk para pecinta K-Pop yang saat ini banyak digandrungi oleh para remaja maupun dewasa. Kami menghadirkan wadah terpercaya untuk para pecinta K-Pop dala mendapatkan Album dan Lightstick idol kesayangan anda dengan garansi 100% terpercaya.</p>
         </div>
       </div>
       <!-- cara order -->
