--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       <div id="order" class="px-4 py-4 bg-light text-center">
         <div class="mx-auto w-75">
           <h3>Cara Order</h3>
-          <p class="text-center"><img src="images/order.png" align="right" style="width: 100px; height: auto" class="ms-3 mb-3" />Anda dapat membeli produk kami dengan menekan tombol detail pada produk yang ingin anda beli. Disana terdapat detail produk dan tombol untuk anda dapat membeli produk kami. dengan menekan tombol beli sekarang anda akan langsung tersambung dengan watsaap kami, selanjutnya anda menuliskan alamat dan nama penerima agar kami bisa memproses barang anda agar sampai sesuai dengan alamat anda. SELAMAT BERBELANJA</p>
+          <p class="text-center"><img src="gambar/logo.jpg" align="right" style="width: 100px; height: auto" class="ms-3 mb-3" />Anda dapat membeli produk kami dengan menekan tombol detail pada produk yang ingin anda beli. Disana terdapat detail produk dan tombol untuk anda dapat membeli produk kami. dengan menekan tombol beli sekarang anda akan langsung tersambung dengan watsaap kami, selanjutnya anda menuliskan alamat dan nama penerima agar kami bisa memproses barang anda agar sampai sesuai dengan alamat anda. SELAMAT BERBELANJA</p>
         </div>
       </div>
       <!-- copyright -->
